# disposable_email_api

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 56423a01890a_add_credit_balance_checks_to_users.py  782a0d5c8b8a_drop_api_keys_tier.py  aefe194681aa_initial_schema.py  b3c8d1a02fe5_drop_stripe_customer_id.py  c4f912a8e6b1_add_polar_columns_and_billing_mode.py  d1f4a91b3c20_drop_metered_columns.py  e4a72d6f8901_add_check_reasoning_columns.py  f29a6e1bbd02_collapse_verify_manually_to_allow_flag.py
app/: main.py
app/api/v1/: deps.py
app/api/v1/routes/: auth.py  billing.py  check.py  health.py  keys.py  lists.py  oauth.py  report.py  usage.py  webhooks.py
app/core/: config.py
app/detection/: engine.py  scorer.py
app/detection/layers/: behavioral.py  blocklist.py  catchall.py  dns_intel.py  syntax.py
app/models/: check.py  errors.py
app/services/: auth.py  credits.py  custom_lists.py  db.py  email.py  idempotency.py  keys.py  oauth.py  polar_billing.py  rate_limit.py  recorder.py  redis_client.py  stripe_billing.py  unkey.py  webhook_dispatch.py
scripts/: seed_blocklist.py
tests/: conftest.py  test_auth_tokens.py  test_scoring.py  test_syntax.py
